@startuml
package "ECSEngineLib" {
  class World
  class Entity
  class Component
  class PositionComponent
  class VelocityComponent
  class FuelComponent
  class ModelComponent
}

World "1" -- "many" Entity : contains
Entity "1" -- "many" Component : has
Component <|-- PositionComponent
Component <|-- VelocityComponent
Component <|-- FuelComponent
Component <|-- ModelComponent
@enduml